--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.0.0",
+    "primevue": "^3.0.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -18,7 +21,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "vue-cli-plugin-vuetify": "~2.0.7"
   },
   "eslintConfig": {
     "root": true,
